gitops/ui/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  labels:
    app: ui
    app.kubernetes.io/part-of: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: 'image-registry.openshift-image-registry.svc:5000/mc/ui:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
