gitops/ui/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  labels:
    app: ui
spec:
  to:
    kind: Service
    name: ui
  port:
    targetPort: 8080-tcp
